# mantle_monitor

backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/alerts/: mod.rs
backend/src/api/: mod.rs
backend/src/blockchain/: mod.rs
backend/src/database/: mod.rs
backend/src/models/: mod.rs
frontend/: mantle_schema.sql
frontend/backend/: .env
frontend/src/: App.css  App.tsx
